<resources>
    <string name="app_name">My Application</string>
    <string name="entrez_votre_mot_de_passe">Entrer votre mot de passe</string>
    <string name="entrez_votre_identifiant">Entrer votre email</string>
    <string name="connexion">Connexion</string>
    <string name="urbankey">Paris Caretaker Services</string>
    <string name="capacte">Nombre de chambre :</string>
    <string name="prix">Prix :</string>
    <string name="adresse">Adresse :</string>
    <string name="titre">Titre</string>
    <string name="compte">ou Créer un compte</string>
    <string name="inscription">Inscription</string>
    <string name="vous_avez_un_compte">Vous avez déja un compte ?</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="code_postal">Code postal</string>
    <string name="date_anniversaire">Date d\'anniversaire :</string>
    <string name="v_rification">Vérification</string>
    <string name="envoyer_un_code">Envoyer un code</string>
    <string name="mettrez_votre_code_de_verification">Mettrez votre code de vérification :</string>
    <string name="entrez_votre_code">Entrer votre code</string>
    <string name="verifier_le_code">Vérifier le code</string>
    <string name="verification_email">Vérification de l\'email :</string>
    <string name="name_user">Name User</string>
    <string name="user_address">user-00@free.fr</string>
    <string name="deconection">Deconection</string>
    <string name="parametre">Paramètre</string>
    <string name="profile">Profile</string>
    <string name="acceuil">Accueil</string>
    <string name="open">Ouvert</string>
    <string name="close">Fermé</string>
    <string name="adresse_input">Adresse</string>
    <string name="surface">Surface :</string>
    <string name="information">Information</string>
    <string name="description">Description</string>
    <string name="les_services_propos_s">Les services proposés</string>
    <string name="commentaire">Commentaire</string>
    <string name="dates_d_indisponibilit">Dates d\'indisponibilité</string>
    <string name="propri_taire">Propriétaire</string>
    <string name="vide">..</string>
    <string name="services">Services</string>
    <string name="description_des_services_disponibles">Description des services disponibles</string>
    <string name="commentaire_comment">Commentaire</string>
    <string name="il_y_a">Il y a</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="_0">0</string>
    <string name="ajouter_un_commentaire">Ajouter un commentaire</string>
    <string name="commentaire_input">Commentaire ...</string>
    <string name="envoyer">Envoyer</string>
    <string name="supprimer">Supprimer</string>
    <string name="mes_informations_personnelles">Mes informations personnelles</string>
    <string name="modifier_le_profile">Modifier le profile</string>
    <string name="lbl_nom">Nom :</string>
    <string name="lbl_prenom">Prénom :</string>
    <string name="lbl_email">Email :</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="lbl_date_de_naissance">Date de naissance :</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="lbl_adresse">Adresse :</string>
    <string name="lbl_code_postal">Code postal :</string>
    <string name="_00000">00000</string>
    <string name="entrez_votre_email">Entrez votre email</string>
    <string name="entrez_votre_pr_nom">Entrez votre prénom</string>
    <string name="entrez_votre_nom">Entrez votre nom</string>
    <string name="jj_mm_aaaa">JJ/MM/AAAA</string>
    <string name="entrez_votre_code_postal">Entrez votre code postal</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="annuler">Annuler</string>
    <string name="scanner_le_nfc">Scanner le NFC</string>
    <string name="scan">Scan</string>
</resources>