<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifAccount">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/urbankey_green_light"
        android:padding="8dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urbankey"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/connexionUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v_rification"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btn_SendMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connexionUser"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/urbankey_green_very_light"
        android:text="@string/envoyer_un_code"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/labelCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mettrez_votre_code_de_verification"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/btn_SendMail"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/codeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelCode"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@drawable/red_rounded_border"
        android:hint="@string/entrez_votre_code"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/lblVerifEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_email"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/codeInput"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_verifcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblVerifEmail"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/urbankey_green_light"
        android:text="@string/verifier_le_code"
        tools:ignore="DuplicateSpeakableTextCheck" />

</RelativeLayout>