<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/row_lodging"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lodging_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre"
        android:padding="15dp"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/lodging_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/urbankey_gray_light"
        android:src="@drawable/default_image_mainson" />



    <com.example.myapplication.RatingStars
        android:id="@+id/ratingStars"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/lodging_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adresse"
        android:padding="5dp"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/lodging_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prix"
        android:padding="5dp"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/lodging_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capacte"
        android:padding="5dp"
        android:textSize="18sp" />

    <View
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/urbankey_green_light" />


</LinearLayout>