<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawLayout_setting_lodging"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/urbankey_green_light"
    tools:context=".SettingLodging">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/urbankey_green_light"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/urbankey_green_light"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/urbankey"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/burger_menu"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/burger_menu" />
            </LinearLayout>
        </LinearLayout>

        <!-- Detail du Lodgings -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/setting_lodging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <TextView
                    android:id="@+id/lodging_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titre"
                    android:padding="15dp"
                    android:textSize="22sp"
                    android:gravity="center"/>

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@color/urbankey_gray_light"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/image_list_container"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/default_image_mainson"
                        android:orientation="horizontal">
                    </LinearLayout>
                </HorizontalScrollView>


                <com.example.myapplication.RatingStars
                    android:id="@+id/ratingStars"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

                <View
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/urbankey_green_light" />

                <TextView
                    android:id="@+id/lodging_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lodging_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adresse"
                    android:padding="5dp"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/lodging_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prix"
                    android:padding="5dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lodging_surface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/surface"
                    android:padding="5dp"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/lodging_capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/capacte"
                    android:padding="5dp"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/urbankey_green_light"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/propri_taire"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/lodging_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vide"
                    android:padding="15dp"
                    android:textSize="18sp" />

                <View
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/urbankey_green_light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/lodging_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vide"
                    android:padding="15dp"
                    android:textSize="18sp" />

                <View
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/urbankey_green_light" />

                <TextView
                    android:id="@+id/lodging_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/les_services_propos_s"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/list_lodgings_services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />

                <View
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/urbankey_green_light" />

                <!-- Insertion du CalendarView -->
                <TextView
                    android:id="@+id/lodging_calendar_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dates_d_indisponibilit"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />

                <View
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/urbankey_green_light" />

                <TextView
                    android:id="@+id/lodging_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/commentaire"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/list_lodgings_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />

                <View
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/urbankey_green_light" />

                <TextView
                    android:id="@+id/lodging_add_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ajouter_un_commentaire"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.example.myapplication.RatingStarsBtn
                    android:id="@+id/add_ratingStars"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/commentInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/red_rounded_border"
                        android:hint="@string/commentaire_input"
                        android:minHeight="48dp"
                        android:padding="10dp"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btn_commentInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/urbankey_green_light"
                        android:text="@string/envoyer" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="end"
        android:fitsSystemWindows="true" />

</androidx.drawerlayout.widget.DrawerLayout>
