<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/urbankey_green_light"
        android:padding="8dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urbankey"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/connexionUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connexionUser"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@drawable/red_rounded_border"
        android:hint="@string/entrez_votre_identifiant"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@drawable/red_rounded_border"
        android:hint="@string/entrez_votre_mot_de_passe"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/urbankey_green_light"
        android:text="@string/connexion"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_connection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/compte"
        android:textColor="@color/urbankey_green_light"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        android:padding="10dp" />


</RelativeLayout>
